--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "eslint": "^8",
