--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "js-cookie": "^3.0.5",
